k8sapps/k8s-test-deploy/mock_ingress_conf.yml
#
# Create at 2019-01-22, build mock ingress env.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mock-app-ingress
  namespace: kc-test-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8s.test.com
    http:
      paths:
      - backend:
          serviceName: mock-app-service
          servicePort: 17891
#       path: /mock

---
kind: Service 
apiVersion: v1
metadata:
  name: mock-app-service
  namespace: kc-test-ns
  labels:
    app: mock-app-service
spec:
# type: NodePort # use ingress instead
  ports:
  - protocol: TCP
    port: 17891   # 暴露在clusterip上的端口, 供集群内部使用
    targetPort: 17891  # pod上的端口
  selector:
    app: mock-app  # select pods

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-app-deploy
  namespace: kc-test-ns
  labels:
    app: mock-app-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mock-app
  template:
    metadata:
      labels:
        app: mock-app
    spec:
      containers:
      - name: mock-app
        image: localhost:5000/mock
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 17891
